Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88768

View3D having node with Qt Quick texture as material crashes when loaded and unloaded with Loader

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.3
    • 5.15.2
    • Quick: 3D
    • None
    • Linux/X11, Windows
    • 2
    • d2d0f759211b79c88723298ada78a5dd2b5f4abe
    • Qt Quick 3D - 49/50

      View3D with a node having Qt Quick content as material in scene created with Loader.
      Load View3D with Loader -> unload -> load again -> (repeat if needed) -> crash.

      Test application attached.

       

       

        1. LoaderView3DTest.zip
          4 kB
          Tero Alamäki
        2. loaderview3dtest_fullstacktrace_win.txt
          24 kB
          Tero Alamäki
        3. loaderview3d_fullbacktrace_linux.txt
          33 kB
          Tero Alamäki
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            tealamak Tero Alamäki
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes