Backport a number of Texture.sourceItem related changes from Qt 6

Fixes: QTBUG-88768
Fixes: QTBUG-88769
Fixes: QTBUG-88771
Change-Id: Icf63ff485a6c7d0e765f728d4b7b3d79e14e3f25
Reviewed-by: Andy Nichols <andy.nichols@qt.io>